--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+    height: 1800px;
+    /* width: 100%; */
+    background-color: #F5F5F5;
+    padding: 2rem 7rem;
+}
+
+@media(max-width:1200px) {
+    .App {
+        height: 2000px;
+        /* width: 100%; */
+        padding: 0px 0px;
+    }
+}
+
+@media(max-width:546px) {
+    .App {
+
+        width: 150vw;
+        padding: 0;
+    }
 }
